# irrational-market-sim

./: .gitignore  LICENSE  README.md  analysis.py  requirements.txt
engine/: Cargo.toml
engine/frontend/: index.html  package-lock.json  package.json
engine/frontend/src/: App.jsx  GodPanel.jsx  index.css  main.jsx
engine/src/: agents.rs  lib.rs  main.rs  orderbook.rs  state.rs  types.rs
engine/src/routes/: admin.rs
